# canonical-k-mer-hash-table

./: CMakeLists.txt  README.md  main.cpp  run_myht.sh
include/: double_bloomfilter.hpp  double_bloomfilter_backup.hpp  file_reader.hpp  functions_bloom_filter.hpp  functions_kmer_mod.hpp  functions_math.hpp  functions_strings.hpp  hash_functions.hpp  kmer.hpp  kmer_factory.hpp  kmer_hash_table.hpp  mybitarray.hpp  parallel_parser.hpp  parallel_parser_BF.hpp  program_runs.hpp  text_reader.h  ts_queue.h
include/old/: functions_math.hpp  functions_strings.hpp  functions_strings_SLOWINLINE.hpp  hash_functions.hpp  kmer.hpp  kmer_factory.hpp  kmer_hash_table.hpp
pytools/: compare_outputs.py  kmer_orienter.py
source/: CMakeCache.txt  CMakeLists.txt  KMerHashtable  Makefile  cmake_install.cmake  file_reader.cpp  functions_bloom_filter.cpp  functions_kmer_mod.cpp  functions_math.cpp  functions_strings.cpp  hash_functions.cpp  kmer.cpp  kmer_factory.cpp  kmer_hash_table.cpp  main.cpp  program_runs.cpp
source/old/: functions_math.cpp  hash_functions.cpp  kmer.cpp  kmer_factory.cpp  kmer_hash_table.cpp  main.cpp  program_runs.cpp
